# Noa

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Casks/: noa.rb
assets/: Noa.sdef  noa.icns
bench/: METHODOLOGY.md  README.md  aggregate.py  gen_scroll.py  generate_data.py  run_all.sh  run_benchmark.sh  visualize.py  wrapper.sh
bench/probes/drain-staircase/: Cargo.toml
bench/probes/drain-staircase/src/: main.rs
bench/tools/: dispinfo.c  dsr_probe.c  fire.c  (+3 more)
crates/noa-app/: Cargo.toml  build.rs
crates/noa-app/src/: anim.rs  app.rs  app_actions.rs  auto_approve.rs  branch_poll.rs  chrome.rs  cli.rs  clipboard.rs  command_palette.rs  commands.rs  connection_qr.rs  debounce.rs  events.rs  input.rs  io_thread.rs  ipc_bridge.rs  latency_trace.rs  lib.rs  link_open.rs  localtime.rs  macos_applescript.rs  macos_blur.rs  macos_hotkey.rs  macos_menu.rs  macos_overlay.rs  macos_window.rs  memory.rs  mouse.rs  notification.rs  process_monitor.rs  remote_attach.rs  search_prompt.rs  secure_input.rs  session.rs  session_persist.rs  session_store.rs  sidebar.rs  split_tree.rs  startup_trace.rs  tab_overview.rs  (+4 more)
crates/noa-app/src/app/: applescript.rs  auto_approve.rs  commands.rs  config.rs  config_reload.rs  event_loop.rs  helpers.rs  input_ops.rs  ipc.rs  lifecycle.rs  overview.rs  pane_drag.rs  pane_drag_render.rs  quick_terminal.rs  remote_ui.rs  render.rs  scratch_terminal.rs  session_restore.rs  sidebar.rs  split_ops.rs  state.rs  timers.rs
crates/noa-app/src/app/helpers/: dispatch.rs  geometry.rs  lifecycle.rs  resize.rs  scroll.rs  surface.rs  tests.rs
crates/noa-app/src/app/input_ops/: clipboard_confirm.rs  copy_mode.rs  ime.rs  layout.rs  overlays.rs  pointer.rs  process_monitor.rs  search.rs  tab_title.rs  terminal.rs  theme_settings.rs
crates/noa-app/src/app/overview/: drag.rs  interaction.rs  layout.rs  lifecycle.rs  render.rs
crates/noa-app/src/app/sidebar/: interaction.rs  model.rs  palette.rs  render.rs  state.rs  tests.rs
crates/noa-app/src/commands/: command.rs  key_token.rs  keybind.rs  tests.rs
crates/noa-app/src/input/: ime.rs  key.rs  kitty.rs  paste.rs  tests.rs  text.rs
crates/noa-app/src/io_thread/: auto_approve.rs  feed.rs  input_queue.rs  ipc_tap.rs  overview.rs  raw_attach.rs  redraw.rs  sidebar.rs  spawn.rs  tests.rs
crates/noa-app/src/macos_overlay/: imp.rs  model.rs  sync.rs  tests.rs
crates/noa-app/src/macos_overlay/imp/: appkit.rs  noop.rs
crates/noa-app/src/session_overview/: input.rs  layout.rs  metrics.rs  mod.rs  tab_tiles.rs  text.rs
crates/noa-app/src/split_tree/: tree.rs
crates/noa-app/src/split_tree/tree/: close.rs  commands.rs  focus.rs  hit_test.rs  layout.rs  ops.rs  reposition.rs  resize.rs  tests.rs  types.rs  zoom.rs
crates/noa-app/src/tab_overview/: render.rs
crates/noa-app/src/theme_settings/: rich.rs  rows.rs  sample.rs  state.rs  tests.rs
crates/noa-font/: Cargo.toml
crates/noa-font/src/: atlas.rs  boxdraw.rs  config.rs  face.rs  grid.rs  lib.rs  raster.rs  shape.rs
crates/noa-grid/: Cargo.toml
crates/noa-grid/examples/: bench_throughput.rs  feed_bench.rs  replay.rs  throughput.rs
crates/noa-grid/src/: cell.rs  charset.rs  copy_mode.rs  cursor.rs  grapheme.rs  kitty.rs  kitty_keyboard.rs  kitty_placeholder.rs  lib.rs  modes.rs  osc.rs  path.rs  screen.rs  scrollback.rs  search.rs  selection.rs  sixel.rs  tabstops.rs  terminal.rs  tests.rs  url.rs
crates/noa-grid/src/screen/: edit.rs  line_batch.rs  print.rs  reflow.rs  text.rs
crates/noa-grid/src/terminal/: handler.rs  kitty_graphics.rs  reports.rs  seed.rs
crates/noa-grid/src/tests/: bulk_print.rs  erase_set_from.rs  kitty_graphics.rs  line_batch.rs  mod.rs  occupancy_watermark.rs  osc.rs  print_overwrite.rs  selection_search.rs  terminal_state.rs  text_resize.rs  vt_sequences.rs
crates/noa-grid/tests/: ring_interleave_diff.rs  styled_batch_bug.rs  wide_remnant_diff.rs
crates/noa-ipc/: Cargo.toml
crates/noa-ipc/src/: attach.rs  auth.rs  backend.rs  client.rs  error.rs  lib.rs  protocol.rs  push.rs  server.rs
crates/noa-ipc/tests/: attach_tests.rs  server_tests.rs  token_tests.rs
crates/noa-render/: Cargo.toml
crates/noa-render/examples/: cell_bandwidth.rs  mem_probe.rs
crates/noa-render/src/: background_image.rs  blit.rs  draw_plan.rs  image_layer.rs  instance.rs  lib.rs  pipeline.rs  renderer.rs  segment.rs  shared.rs  snapshot.rs  theme.rs
crates/noa-render/src/renderer/: atlas.rs  cell.rs  color.rs  cursor.rs  mod.rs  overlay.rs  tests.rs
crates/noa-render/src/renderer/tests/: atlas.rs  cache.rs  cell.rs  color.rs  cursor.rs  overlay.rs  shape.rs
crates/noa-render/src/shaders/: background_image.wgsl  blit.wgsl  card.wgsl  cell.wgsl  image.wgsl
crates/noa-render/tests/: cache_equiv.rs  pipeline.rs  tab_switch_bench.rs
crates/noa-render/tests/pipeline/: cards.rs  cell.rs  images.rs  overview.rs  shared.rs  shared_atlas.rs  split_atlas.rs
crates/noa-vt/: Cargo.toml
crates/noa-vt/src/: action.rs  csi.rs  handler.rs  kitty_graphics.rs  lib.rs  parser.rs  sgr.rs  sixel.rs  state.rs  stream.rs  tests.rs
docs/: CONFIGURATION.md  FEATURES.md  KEYBINDINGS.md  ghostty-parity-plan.md  mascot-4koma-prompts.md  mascot-4koma.md  mascot-ip-bible.md  mascot-ip.md  mascot-profile.md  mascot-prompts.md  performance-measurements.md  performance-resource-optimization-matrix.md  positioning.md  release-signing.md
scripts/: applescript-smoke.sh  build-pgo.sh  bundle-macos.sh  gen-icon.sh  gen-themes  monitor-resources.sh  release.sh
tests/parity/: Cargo.toml  README.md
tests/parity/fixtures/: alt_screen.txt  bce_erase.txt  decawm_off.txt  decsc_decrc.txt  decstbm_il_dl.txt  erase_display_all.txt  erase_display_below_above.txt  erase_line_variants.txt  ich_dch.txt  il_dl.txt  ind_ri_margins.txt  rep.txt  scroll_region_origin.txt  sgr_16.txt  sgr_256.txt  sgr_truecolor.txt  tabs_hts_tbc.txt  wide_cjk_eol.txt  wrap_boundary.txt  wrap_deferred.txt
tests/parity/src/: diff.rs  dump.rs  fixture.rs  lib.rs  tests.rs
tests/parity/tests/: fixtures.rs
(+149 files in other folders)
