[workspace]
resolver = "3"
members = ["crates/*", "bin/noa", "tests/parity"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/simota/Noa"

[workspace.dependencies]
# ── internal crates ────────────────────────────────────────────────
noa-core   = { path = "crates/noa-core" }
noa-vt     = { path = "crates/noa-vt" }
noa-grid   = { path = "crates/noa-grid" }
noa-font   = { path = "crates/noa-font" }
noa-render = { path = "crates/noa-render" }
noa-pty    = { path = "crates/noa-pty" }
noa-app    = { path = "crates/noa-app" }
noa-config = { path = "crates/noa-config" }
noa-theme  = { path = "crates/noa-theme" }

# ── windowing + gpu (only noa-app / noa-render may use these) ───────
winit             = "0.30"
wgpu              = "27"
pollster          = "0.4"
raw-window-handle = "0.6"

# ── glyph pipeline ─────────────────────────────────────────────────
swash     = "0.2"
etagere   = "0.2"
font-kit  = "0.14"
rustybuzz = "0.20"
memmap2   = "0.9"

# ── pty ────────────────────────────────────────────────────────────
portable-pty = "0.9"
libc         = "0.2"

# ── gpu data / concurrency / unicode ───────────────────────────────
bytemuck          = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
parking_lot       = "0.12"
unicode-width     = "0.2"

# ── image decoding (Kitty graphics: PNG + zlib) ────────────────────
png    = "0.18"
flate2 = "1"

# ── ergonomics ─────────────────────────────────────────────────────
bitflags   = "2"
anyhow     = "1"
thiserror  = "2"
log        = "0.4"
env_logger = "0.11"
clap       = { version = "4", features = ["derive"] }
dirs       = "6"
