[workspace]
resolver = "3"
members = ["crates/*", "bin/noa", "tests/parity", "bench/probes/drain-staircase"]

# Cross-crate inlining for the release binary: the hot pty→parser→grid feed
# path spans noa-vt/noa-grid crate boundaries, and thin LTO recovers the
# inlining the default per-crate codegen leaves on the table (measured
# double-digit % on bulk-output throughput). Fat LTO measured *slower*
# (-5% ingest, 2026-07); target-cpu=native measured neutral — keep thin.
[profile.release]
lto = "thin"
codegen-units = 1

[workspace.package]
edition = "2024"
version = "0.2.3"
license = "MIT"
repository = "https://github.com/simota/Noa"

[workspace.dependencies]
# ── internal crates ────────────────────────────────────────────────
noa-core   = { path = "crates/noa-core" }
noa-vt     = { path = "crates/noa-vt" }
noa-grid   = { path = "crates/noa-grid" }
noa-font   = { path = "crates/noa-font" }
noa-render = { path = "crates/noa-render" }
noa-pty    = { path = "crates/noa-pty" }
noa-app    = { path = "crates/noa-app" }
noa-config = { path = "crates/noa-config" }
noa-theme  = { path = "crates/noa-theme" }
noa-ipc    = { path = "crates/noa-ipc" }

# ── windowing + gpu (only noa-app / noa-render may use these) ───────
winit             = "0.30"
wgpu              = "27"
pollster          = "0.4"
raw-window-handle = "0.6"

# ── glyph pipeline ─────────────────────────────────────────────────
swash     = "0.2"
etagere   = "0.2"
font-kit  = "0.14"
rustybuzz = "0.20"
memmap2   = "0.9"

# ── pty ────────────────────────────────────────────────────────────
portable-pty = "0.9"
libc         = "0.2"

# ── gpu data / concurrency / unicode ───────────────────────────────
bytemuck          = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
parking_lot       = "0.12"
unicode-width     = "0.2"

# ── image decoding (Kitty graphics: PNG + zlib; background-image: JPEG/WebP) ──
png        = "0.18"
qrcode     = { version = "0.14", default-features = false }
flate2     = "1"
zune-jpeg  = "0.5"
image-webp = "0.2"

# ── ergonomics ─────────────────────────────────────────────────────
bitflags   = "2"
anyhow     = "1"
thiserror  = "2"
log        = "0.4"
env_logger = "0.11"
clap       = { version = "4", features = ["derive"] }
dirs       = "6"

# ── ipc/protocol ───────────────────────────────────────────────────
tungstenite = "0.24"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rand        = "0.8"
