[package]
name = "noa-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
noa-core.workspace = true
noa-vt.workspace = true
noa-grid.workspace = true
noa-font.workspace = true
noa-render.workspace = true
noa-pty.workspace = true
noa-theme.workspace = true
noa-config.workspace = true

winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
muda = { version = "0.19", default-features = false }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray", "NSData"] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSPasteboard",
    "NSPasteboardItem",
    "NSBitmapImageRep",
    "NSImageRep",
] }
