[package]
name = "noa-grid"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
noa-core.workspace = true
bitflags.workspace = true
noa-vt.workspace = true
thiserror.workspace = true
unicode-width.workspace = true
png.workspace = true
flate2.workspace = true
# OSC 7 anti-spoofing hostname check (REQ-OSC-2): `gethostname(2)`. Already a
# workspace dependency via `noa-pty`, so this adds no new crate to fetch.
libc.workspace = true
