[package]
name = "noa-ipc"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
log.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
